--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+8852bu (1.15.7.112.2) stable; urgency=medium
+
+  * Fix changelog
+
+ -- "Radxa Computer Co., Ltd" <dev@radxa.com>  Tue, 11 Apr 2023 11:05:16 +0800
+
 8852bu (1.15.7.112.1) stable; urgency=medium
 
   * Fix module loading
