--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+8852bu (1.15.7.112-2) stable; urgency=medium
+
+  [ ZHANG Yuntian ]
+  * Fix build as dkms module
+
+ -- "Radxa Computer Co., Ltd" <dev@radxa.com>  Mon, 24 Apr 2023 16:12:50 +0800
+
 8852bu (1.15.7.112-1) stable; urgency=medium
 
   * Change source format
